# meow

./: .gitignore  Caddyfile  DEV.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  shell.nix  test.py
api/: .env  Cargo.toml  Dockerfile  build.rs  shell.nix
api/migrations/2024-11-05-211001_create_brainlog/: down.sql  up.sql
api/migrations/2024-11-10-223436_use_enum_for_brainlog_entry_type/: down.sql
api/migrations/2024-11-10-223436_use_string_for_brainlog_entry_type/: up.sql
api/migrations/2024-11-26-121753_create_quest/: down.sql  up.sql
api/migrations/2024-12-04-123944_add_finance/: down.sql  up.sql
api/src/: lib.rs  main.rs
api/src/api/: apikey.rs  brainlog.rs  crud_common.rs  mod.rs  quest.rs
api/src/db/: mod.rs  schema.rs  utcdatetime.rs
api/src/db/models/: brainlog.rs  mod.rs  quest.rs
frontend/: index.html  package-lock.json  package.json  shell.nix
frontend/src/: App.vue  Login.vue  LoginView.vue  MainPage.vue  Page.vue  main.ts  router.ts
frontend/src/api/: api.ts  brainlog.ts  quest.ts  quest_item.ts
frontend/src/components/: ISODateTimePicker.vue
frontend/src/views/: Brainlog.vue  BrainlogView.vue  Crud.vue  CrudView.vue  Quest.vue  QuestItem.vue  QuestItemView.vue  QuestView.vue  TestView.vue  TestView2.vue
meow/: __init__.py  main.py  registry.py
meow/brainlog/: models.py  routes.py  types.py
meow/finance/: models.py  routes.py
